--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "typeorm": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js -d ormconfig.js",
+    "migration:create": "yarn build && yarn typeorm migration:create",
+    "migration:run": "yarn build && yarn typeorm migration:run",
+    "migration:revert": "yarn build && yarn typeorm migration:revert",
+    "migration:gen": "yarn build && yarn typeorm migration:generate"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
+    "class-validator": "^0.14.0",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
