--- a/package.json
+++ b/package.json
@@ -12,26 +12,22 @@
     "start:dev": "yarn build && nest start --watch",
     "start:debug": "yarn build && nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "typeorm": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js -d ormconfig.js",
-    "migration:create": "yarn build && yarn typeorm migration:create",
-    "migration:run": "yarn build && yarn typeorm migration:run",
-    "migration:revert": "yarn build && yarn typeorm migration:revert",
-    "migration:gen": "yarn build && yarn typeorm migration:generate"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.1.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
     "class-validator": "^0.14.0",
-    "pg": "^8.11.2",
+    "kafkajs": "^2.2.4",
+    "nestjs-kafka": "^1.0.6",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.17"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -55,22 +51,5 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
