--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,16 @@
-version: '3.8'
-
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:6.2.1 # Use uma versão específica
+    image: confluentinc/cp-zookeeper:latest
+    networks: 
+      - broker-kafka
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
   kafka:
-    image: confluentinc/cp-kafka:6.2.1 # Use uma versão específica
+    image: confluentinc/cp-kafka:latest
+    networks: 
+      - broker-kafka
     depends_on:
       - zookeeper
     ports:
@@ -23,9 +25,15 @@ services:
 
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
+    networks: 
+      - broker-kafka
     depends_on:
       - kafka
     ports:
       - 19000:9000
     environment:
       KAFKA_BROKERCONNECT: kafka:29092
+
+networks: 
+  broker-kafka:
+    driver: bridge  
